# HOT_Energy

./: CMakeLists.txt  status.txt
doc/: CGAL.txt
examples/: readme.txt
examples/HOT_fig1/: HOT_fig1_points.txt  HOT_fig1_triangles.txt
include/Wasserstein/: WassersteinEdgeEdge.hpp  WassersteinEdgeEdgeTest.hpp  WassersteinKernel.hpp
include/hot/: Sb.hpp  cgal-kernel.h  energyNOweights.hpp  energyWeights.hpp  hot.hpp  ply_writer.hpp
include/optimization/: analytic_HOT_energy_Derv.hpp  lloyds.hpp
include/polynomial/: array.hpp  polynomial.hpp
src/: hot.cpp
src/DEC/: make_circle_mesh.cpp
src/energy/: energy.cpp  lloydsCVT.cpp
src/experiments/: exp1_constrained_isoscles.cpp  exp2_vertex_to_fixed_edge.cpp  exp3_collapse_no_large_angles.cpp  exp4_hex_patch.cpp  exp5_horseV.cpp  exp5_horseV_DT.cpp  exp6_rectangle.cpp  exp7_vertex_to_fixed_edge_correctedformulas.cpp
src/experiments/NDTvDT/: NDTvDT_exp1.cpp  NDTvDT_exp2.cpp  NDTvDT_exp3.cpp
src/hot/: HotOptimizedMesh.hpp  OptimizedMesh.hpp  WassersteinEdgeEdgeTest.cpp  hot.cpp  ply_writer.cpp
src/sandbox/: draw_voronoi.cpp  sandbox.cpp
src/test/: analytic_v_finiteDiff.cpp  test.cpp
src/wasserstein/: WassersteinEdgeEdgeTest.cpp  wasserstein.cpp
